src/tests/select/snapshots/ciboulette2postgres__tests__select__include_multiple_resources_sorting.snap
---
source: src/tests/select/mod.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type_": "articles",
    "data": {
      "body": "Yes",
      "title": "How to dead"
    }
  },
  {
    "id": "[uuid]",
    "type_": "articles",
    "data": {
      "body": "They feast on the blood of the departed draw their powers",
      "title": "Why devs require sacrifices"
    }
  },
  {
    "id": "[uuid]",
    "type_": "articles",
    "data": {
      "body": "Yeah I know ! Right ?!",
      "title": "Oh my g**"
    }
  },
  {
    "id": "[uuid]",
    "type_": "favorite_color",
    "data": null
  },
  {
    "id": "[uuid]",
    "type_": "favorite_color",
    "data": null
  },
  {
    "id": "[uuid]",
    "type_": "favorite_color",
    "data": null
  },
  {
    "id": "[uuid]",
    "type_": "people-article",
    "data": {
      "article_id": "[uuid]",
      "people_id": "[uuid]"
    }
  },
  {
    "id": "[uuid]",
    "type_": "people-article",
    "data": {
      "article_id": "[uuid]",
      "people_id": "[uuid]"
    }
  },
  {
    "id": "[uuid]",
    "type_": "people-article",
    "data": {
      "article_id": "[uuid]",
      "people_id": "[uuid]"
    }
  },
  {
    "id": "[uuid]",
    "type_": "peoples",
    "data": {
      "age": null,
      "first-name": "AAAAAAAA",
      "gender": null,
      "last-name": "BBBBBBBBB",
      "twitter": null
    }
  },
  {
    "id": "[uuid]",
    "type_": "peoples",
    "data": {
      "age": 22,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    }
  },
  {
    "id": "[uuid]",
    "type_": "peoples",
    "data": {
      "age": 34,
      "first-name": "Somebody",
      "gender": "F",
      "last-name": "Wuhu",
      "twitter": "@randomhandle"
    }
  }
]
